@@ -350,6 +350,21 @@ name|xmlFieldsMissingInConfiguration
 init|=
 literal|null
 decl_stmt|;
+comment|/**    * Member variable for debugging base class operation    */
+DECL|field|configDebug
+specifier|protected
+name|boolean
+name|configDebug
+init|=
+literal|false
+decl_stmt|;
+DECL|field|xmlDebug
+specifier|protected
+name|boolean
+name|xmlDebug
+init|=
+literal|false
+decl_stmt|;
 comment|/**    * Abstract method to be used by subclasses for initializing base    * members.    */
 DECL|method|initializeMemberVariables ()
 specifier|public
@@ -405,7 +420,7 @@ comment|// Setup regexp for valid properties
 name|String
 name|propRegex
 init|=
-literal|"^[A-Za-z_-]+(\\.[A-Za-z_-]+)+$"
+literal|"^[A-Za-z][A-Za-z0-9_-]+(\\.[A-Za-z0-9_-]+)+$"
 decl_stmt|;
 name|Pattern
 name|p
@@ -434,6 +449,23 @@ range|:
 name|fields
 control|)
 block|{
+if|if
+condition|(
+name|configDebug
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"Field: "
+operator|+
+name|f
+argument_list|)
+expr_stmt|;
+block|}
 comment|// Filter out anything that isn't "public static final"
 if|if
 condition|(
@@ -517,6 +549,23 @@ name|iaException
 parameter_list|)
 block|{
 continue|continue;
+block|}
+if|if
+condition|(
+name|configDebug
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"  Value: "
+operator|+
+name|value
+argument_list|)
+expr_stmt|;
 block|}
 comment|// Special Case: Detect and ignore partial properties (ending in x)
 comment|//               or file properties (ending in .xml)
@@ -632,9 +681,50 @@ name|find
 argument_list|()
 condition|)
 block|{
+if|if
+condition|(
+name|configDebug
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"  Passes Regex: false"
+argument_list|)
+expr_stmt|;
+block|}
 continue|continue;
 block|}
+if|if
+condition|(
+name|configDebug
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"  Passes Regex: true"
+argument_list|)
+expr_stmt|;
+block|}
 comment|// Save member variable/value as hash
+if|if
+condition|(
+operator|!
+name|retVal
+operator|.
+name|containsKey
+argument_list|(
+name|value
+argument_list|)
+condition|)
+block|{
 name|retVal
 operator|.
 name|put
@@ -647,6 +737,27 @@ name|getName
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+if|if
+condition|(
+name|configDebug
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"ERROR: Already found key for property "
+operator|+
+name|value
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 return|return
 name|retVal
@@ -786,6 +897,23 @@ name|key
 argument_list|)
 condition|)
 block|{
+if|if
+condition|(
+name|xmlDebug
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"  Skipping Full Key: "
+operator|+
+name|key
+argument_list|)
+expr_stmt|;
+block|}
 continue|continue;
 block|}
 block|}
@@ -833,6 +961,23 @@ condition|(
 name|skipPrefix
 condition|)
 block|{
+if|if
+condition|(
+name|xmlDebug
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"  Skipping Prefix Key: "
+operator|+
+name|key
+argument_list|)
+expr_stmt|;
+block|}
 continue|continue;
 block|}
 if|if
@@ -854,6 +999,23 @@ argument_list|,
 literal|null
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|xmlDebug
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"  XML Key,Null Value: "
+operator|+
+name|key
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 else|else
 block|{
@@ -886,6 +1048,23 @@ name|getValue
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|xmlDebug
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"  XML Key,Valid Value: "
+operator|+
+name|key
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 name|kvItr
@@ -998,6 +1177,30 @@ name|String
 argument_list|>
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|configDebug
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"Reading configuration classes"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|""
+argument_list|)
+expr_stmt|;
+block|}
 for|for
 control|(
 name|Class
@@ -1044,7 +1247,64 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+if|if
+condition|(
+name|configDebug
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|""
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"====="
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|""
+argument_list|)
+expr_stmt|;
+block|}
 comment|// Create XML key/value map
+if|if
+condition|(
+name|xmlDebug
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"Reading XML property files"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|""
+argument_list|)
+expr_stmt|;
+block|}
 name|xmlKeyValueMap
 operator|=
 name|extractPropertiesFromXml
@@ -1052,6 +1312,39 @@ argument_list|(
 name|xmlFilename
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|xmlDebug
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|""
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"====="
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|""
+argument_list|)
+expr_stmt|;
+block|}
 comment|// Find class members not in the XML file
 name|configurationFieldsMissingInXmlFile
 operator|=
