@@ -1,0 +1,284 @@
+begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+
+begin_package
+DECL|package|org.apache.hadoop.mapreduce
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+package|;
+end_package
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashSet
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|conf
+operator|.
+name|TestConfigurationFieldsBase
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapred
+operator|.
+name|JobConf
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapred
+operator|.
+name|ShuffleHandler
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
+name|lib
+operator|.
+name|input
+operator|.
+name|FileInputFormat
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
+name|lib
+operator|.
+name|input
+operator|.
+name|NLineInputFormat
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
+name|lib
+operator|.
+name|output
+operator|.
+name|FileOutputCommitter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
+name|lib
+operator|.
+name|output
+operator|.
+name|FileOutputFormat
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
+name|v2
+operator|.
+name|jobhistory
+operator|.
+name|JHAdminConfig
+import|;
+end_import
+
+begin_comment
+comment|/**  * Unit test class to compare the following MR Configuration classes:  *<p></p>  * {@link org.apache.hadoop.mapreduce.MRJobConfig}  * {@link org.apache.hadoop.mapreduce.MRConfig}  * {@link org.apache.hadoop.mapreduce.v2.jobhistory.JHAdminConfig}  * {@link org.apache.hadoop.mapred.ShuffleHandler}  * {@link org.apache.hadoop.mapreduce.lib.output.FileOutputFormat}  * {@link org.apache.hadoop.mapreduce.lib.input.FileInputFormat}  * {@link org.apache.hadoop.mapreduce.Job}  * {@link org.apache.hadoop.mapreduce.lib.input.NLineInputFormat}  * {@link org.apache.hadoop.mapred.JobConf}  *<p></p>  * against mapred-default.xml for missing properties.  Currently only  * throws an error if the class is missing a property.  *<p></p>  * Refer to {@link org.apache.hadoop.conf.TestConfigurationFieldsBase}  * for how this class works.  */
+end_comment
+
+begin_class
+DECL|class|TestMapreduceConfigFields
+specifier|public
+class|class
+name|TestMapreduceConfigFields
+extends|extends
+name|TestConfigurationFieldsBase
+block|{
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"deprecation"
+argument_list|)
+annotation|@
+name|Override
+DECL|method|initializeMemberVariables ()
+specifier|public
+name|void
+name|initializeMemberVariables
+parameter_list|()
+block|{
+name|xmlFilename
+operator|=
+operator|new
+name|String
+argument_list|(
+literal|"mapred-default.xml"
+argument_list|)
+expr_stmt|;
+name|configurationClasses
+operator|=
+operator|new
+name|Class
+index|[]
+block|{
+name|MRJobConfig
+operator|.
+name|class
+block|,
+name|MRConfig
+operator|.
+name|class
+block|,
+name|JHAdminConfig
+operator|.
+name|class
+block|,
+name|ShuffleHandler
+operator|.
+name|class
+block|,
+name|FileOutputFormat
+operator|.
+name|class
+block|,
+name|FileInputFormat
+operator|.
+name|class
+block|,
+name|Job
+operator|.
+name|class
+block|,
+name|NLineInputFormat
+operator|.
+name|class
+block|,
+name|JobConf
+operator|.
+name|class
+block|,
+name|FileOutputCommitter
+operator|.
+name|class
+block|}
+expr_stmt|;
+comment|// Initialize used variables
+name|configurationPropsToSkipCompare
+operator|=
+operator|new
+name|HashSet
+argument_list|<
+name|String
+argument_list|>
+argument_list|()
+expr_stmt|;
+comment|// Set error modes
+name|errorIfMissingConfigProps
+operator|=
+literal|true
+expr_stmt|;
+name|errorIfMissingXmlProps
+operator|=
+literal|false
+expr_stmt|;
+comment|// Ignore deprecated MR1 properties in JobConf
+name|configurationPropsToSkipCompare
+operator|.
+name|add
+argument_list|(
+name|JobConf
+operator|.
+name|MAPRED_JOB_MAP_MEMORY_MB_PROPERTY
+argument_list|)
+expr_stmt|;
+name|configurationPropsToSkipCompare
+operator|.
+name|add
+argument_list|(
+name|JobConf
+operator|.
+name|MAPRED_JOB_REDUCE_MEMORY_MB_PROPERTY
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+end_class
+
+end_unit
+
